--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 <script src="jquery-1.11.1.js"></script>
-
+<script src="http://cdn.jsdelivr.net/jquery.ajaxify/5.5.0/ajaxify.min.js" type="text/javascript"></script>
 	</head>
 
 	<body>
@@ -73,7 +73,7 @@
 														     EASY WAY SCIENCE
 														     
 														     </h1>
-
+<button id="me">click me</button>
 
 												        </div>
 												        
@@ -112,11 +112,14 @@ These validation warnings don't matter in practice since the non-hacky portion o
 	
 
 <script>
-// $(document).ready(function(){
+$(document).ready(function(){
 	
-// imagesChange(1);
+//imagesChange(1);
+$("#me").click(function(){
+	jQuery().ajaxify("http://google.com");
 
-// });
+});
+});
 function imagesChange(imagenum)
 {
 	
@@ -152,6 +155,7 @@ console.log("hello");
          }, 3000);
 }
 
-</script>		
+</script>
+	
 	</body>
 </html>
